--- a/GeradorDeTestes.WebApp/Views/Disciplina/Index.cshtml
+++ b/GeradorDeTestes.WebApp/Views/Disciplina/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@using GeradorDeTestes.WebApp.Extensions
-@model VisualizarDisciplinaViewModel
+@model VisualizarDisciplinasViewModel
 
 @{
     Layout = "_Layout";
     ViewBag.Titulo = "Visualização de Disciplinas";
+
+    var notificacao = ViewData[nameof(NotificacaoViewModel)] as NotificacaoViewModel;
 }
 
 <p>
@@ -14,6 +16,15 @@
 </p>
 
 <hr />
+
+@if (notificacao is not null)
+{
+    <div class="alert alert-danger alert-dismissible fade show my-3" role="alert">
+        <h6>@notificacao.Titulo</h6>
+        @notificacao.Mensagem
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
 
 <div class="d-flex flex-wrap gap-2">
     @foreach (var item in Model.Registros)
