--- a/GeradorDeTestes.WebApp/Views/Materia/Cadastrar.cshtml
+++ b/GeradorDeTestes.WebApp/Views/Materia/Cadastrar.cshtml
@@ -14,26 +14,30 @@
                 <form asp-action="Cadastrar">
                     <h3>Formulário de Cadastro</h3>
 
+                    @if (ViewData.ModelState["CadastroUnico"]?.Errors.Count > 0)
+                    {
+                        <div class="alert alert-danger alert-dismissible fade show my-3" role="alert">
+                            @ViewData.ModelState["CadastroUnico"]!.Errors.First().ErrorMessage
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    }
+
                     <div class="form-group d-grid gap-2 mt-3">
                         <label asp-for="Nome" class="control-label fs-5">Nome:</label>
                         <input asp-for="Nome" class="form-control" value="@Model.Nome" />
                         <span asp-validation-for="Nome" class="text-danger"></span>
                     </div>
+
+                    <div class="form-group d-grid gap-2 mt-3">
+                        <label asp-for="Serie" class="control-label fs-5">Série:</label>
+                        <select asp-for="Serie" asp-items="@Html.GetEnumSelectList<Serie>()" class="form-select"></select>
+                        <span asp-validation-for="Serie" class="text-danger"></span>
+                    </div>
+                    
                     <div class="form-group d-grid gap-2 mt-3">
                         <label asp-for="DisciplinaId" class="control-label fs-5">Disciplina:</label>
-                        <select asp-for="DisciplinaId" class="form-control">
-                            <option value="">Selecione uma disciplina</option>
-                            @foreach (var contato in Model.Disciplinas)
-                            {
-                                <option value="@contato.Id">@contato.Nome</option>
-                            }
-                        </select>
+                        <select asp-for="DisciplinaId" asp-items="@Model.DisciplinasDisponiveis" class="form-select"></select>
                         <span asp-validation-for="DisciplinaId" class="text-danger"></span>
-                    </div>
-                    <div class="form-group d-grid gap-2 mt-3">
-                        <label asp-for="Serie" class="control-label fs-5">Serie:</label>
-                        <select asp-for="Serie" id="inputTipo" asp-items="@Html.GetEnumSelectList<Serie>()" class="form-select"></select>
-                        <span asp-validation-for="Serie" class="text-danger"></span>
                     </div>
 
                     <div class="form-group d-flex align-items-center justify-content-end gap-3 mt-5">
