--- a/GeradorDeTestes.WebApp/Views/Questao/Editar.cshtml
+++ b/GeradorDeTestes.WebApp/Views/Questao/Editar.cshtml
@@ -4,7 +4,7 @@
     Layout = "_Layout";
     ViewBag.Titulo = "Edição de Questão";
 
-    bool temAlternativaCorreta = Model.Alternativas.Any(a => a.Correta);
+    var alternativasOrdenadasPorLetra = Model.AlternativasSelecionadas.OrderBy(a => a.Letra).ToList();
 }
 
 <hr />
@@ -13,7 +13,7 @@
         <div class="card">
             <div class="card-body p-md-5">
                 <form asp-action="Editar" asp-route-id="@Model.Id">
-                    <h3>Formulário de Cadastro</h3>
+                    <h3>Formulário de Edição</h3>
 
                     @if (ViewData.ModelState["CadastroUnico"]?.Errors.Count > 0)
                     {
@@ -36,69 +36,89 @@
 
                     <h4 class="my-3">Alternativas</h4>
                     
-                    @if (Model.Alternativas.Count < 4)
-                    {
-                        <div class="d-flex flex-wrap gap-2 align-items-center">
-                            <div class="col-12 col-md-7">
-                                <label class="control-label">Alternativa: </label>
-                                <input name="Resposta" class="form-control" />
-                            </div>
+                    <div class="row align-items-end g-3 mt-3">
+                        <div class="col">
+                            <label for="Resposta" class="form-label">Resposta:</label>
 
-                            @if (!temAlternativaCorreta)
-                            {
+                            <div class="d-flex gap-2 align-items-center">
+                                <input type="text" name="Resposta" class="form-control" />
+
                                 <span class="d-flex gap-2">
                                     @Html.CheckBox("Correta", false, new { @class = "form-check-input" })
                                     <label for="Correta" class="form-check-label">Correta</label>
                                 </span>
-                            }
+                            </div>
 
-                            <button type="submit" formaction="/questoes/editar/adicionar-alternativa" class="btn btn-primary align-self-end col">
+                        </div>
+                        <div class="col-md-2 d-flex align-items-end">
+                            <button class="btn btn-outline-primary w-100"
+                                    type="submit"
+                                    formaction="/questoes/editar/@Model.Id/adicionar-alternativa">
                                 Adicionar
                             </button>
                         </div>
-                    }
+                    </div>
 
                     <input type="hidden" asp-for="Id"/>
 
-                    @for (var i = 0; i < Model.Alternativas.Count; i++)
+                    @for (int i = 0; i < alternativasOrdenadasPorLetra.Count; i++)
                     {
-                        <input type="hidden" asp-for="Alternativas[@i].Letra"/>
-                        <input type="hidden" asp-for="Alternativas[@i].Resposta" />
-                        <input type="hidden" asp-for="Alternativas[@i].Correta" />
+                        <input type="hidden" asp-for="AlternativasSelecionadas[@i].Letra" />
+                        <input type="hidden" asp-for="AlternativasSelecionadas[@i].Resposta" />
+                        <input type="hidden" asp-for="AlternativasSelecionadas[@i].Correta" />
                     }
 
-                    <table class="table table-sm table-striped mt-3">
-                        <thead>
-                            <tr>
-                                <th>Resposta</th>
-                                <th>Correta</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var i in Model.Alternativas)
-                            {
-                                <tr>
-                                    <td>@i.Resposta</td>
-
-                                    <td>
-                                        <div class="d-flex justify-content-center gap-2">
-                                            <div class="form-check">
-                                                <input class="form-check-input" readonly disabled type="checkbox" @(i.Correta ? "checked" : "") >
-                                            </div>
-                                        </div>
-                                    </td>
-
-                                    <td>
-                                        <div class="d-flex justify-content-center gap-2">
-                                            <button class="btn btn-sm btn-danger" type="submit" formaction="/questoes/editar/remover-alternativa/@i.Letra">
-                                                <i class="bi bi-trash3"></i>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
+                    @if (alternativasOrdenadasPorLetra.Any())
+                    {
+                        <div class="table-responsive mt-4">
+                            <table class="table table-sm table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>Letra</th>
+                                        <th>Resposta</th>
+                                        <th>Correta</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @for (int i = 0; i < alternativasOrdenadasPorLetra.Count; i++)
+                                    {
+                                        <tr>
+                                            <td valign="middle" style="width: 75px;">
+                                                @alternativasOrdenadasPorLetra[i].Letra)
+                                                <input type="hidden"
+                                                       name="AlternativasSelecionadas[@i].Letra"
+                                                       value="@alternativasOrdenadasPorLetra[i].Letra" />
+                                            </td>
+                                            <td valign="middle">
+                                                @alternativasOrdenadasPorLetra[i].Resposta
+                                                <input type="hidden"
+                                                       name="AlternativasSelecionadas[@i].Resposta"
+                                                       value="@alternativasOrdenadasPorLetra[i].Resposta" />
+                                            </td>
+                                            <td valign="middle" style="width: 75px;">
+                                                @(alternativasOrdenadasPorLetra[i].Correta ? "Sim" : "Não")
+                                                <input type="hidden"
+                                                       name="AlternativasSelecionadas[@i].Correta"
+                                                       value="@alternativasOrdenadasPorLetra[i].Correta" />
+                                            </td>
+                                            <td valign="middle" align="center" style="width: 50px;">
+                                                <button class="btn btn-sm btn-outline-danger rounded"
+                                                        type="submit"
+                                                        formaction="/questoes/editar/@Model.Id/remover-alternativa/@alternativasOrdenadasPorLetra[i].Letra">
+                                                    <i class="bi bi-trash3"></i>
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    }
+                    else
+                    {
+                        <p class="text-muted mt-4">Nenhuma alternativa adicionada.</p>
+                    }
 
                     <div class="form-group d-flex align-items-center justify-content-end gap-3 mt-5">
                         <a href="/questoes">Voltar para a listagem</a>
