--- a/GeradorDeTestes.WebApp/Views/Questao/Index.cshtml
+++ b/GeradorDeTestes.WebApp/Views/Questao/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@model VisualizarQuestaoViewModel
+﻿@model VisualizarQuestoesViewModel
 
 @{
     Layout = "_Layout";
     ViewBag.Titulo = "Visualização de Questões";
+
+    var notificacao = ViewData[nameof(NotificacaoViewModel)] as NotificacaoViewModel;
 }
 
 <p>
@@ -13,6 +15,15 @@
 </p>
 
 <hr />
+
+@if (notificacao is not null)
+{
+    <div class="alert alert-danger alert-dismissible fade show my-3" role="alert">
+        <h6>@notificacao.Titulo</h6>
+        @notificacao.Mensagem
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
 
 <div class="d-flex flex-wrap gap-2">
     @foreach (var item in Model.Registros)
