--- a/GeradorDeTestes.WebApp/Views/Teste/SegundaEtapaGerar.cshtml
+++ b/GeradorDeTestes.WebApp/Views/Teste/SegundaEtapaGerar.cshtml
@@ -1,9 +1,9 @@
 ﻿@using GeradorDeTestes.Dominio.ModuloMateria
-@model DuplicarTesteViewModel
+@model SegundaEtapaGerarTesteViewModel
 
 @{
     Layout = "_Layout";
-    ViewBag.Titulo = "Duplicar Teste";
+    ViewBag.Titulo = "Gerar Teste";
 }
 
 <hr />
@@ -11,8 +11,8 @@
     <div class="col-md-8">
         <div class="card rounded-4 border-0">
             <div class="card-body p-md-5">
-                <form asp-action="Duplicar">
-                    <h3>Formulário de Duplicação</h3>
+                <form asp-action="ConfirmarGeracao">
+                    <h3>Gerar Novo Teste</h3>
 
                     @if (ViewData.ModelState["CadastroUnico"]?.Errors.Count > 0)
                     {
@@ -22,10 +22,10 @@
                         </div>
                     }
 
-                    <div class="form-group d-grid gap-2 mt-3">
-                        <label asp-for="Titulo" class="control-label fs-5">Titulo:</label>
-                        <input asp-for="Titulo" class="form-control" />
-                        <span asp-validation-for="Titulo" class="text-danger"></span>
+                    <div class="d-flex gap-2 mt-3">
+                        <label class="fw-semibold">Titulo:</label>
+                        <span>@Model.Titulo</span>
+                        <input type="hidden" asp-for="Titulo" />
                     </div>
 
                     <div class="d-flex gap-2 mt-3">
@@ -65,7 +65,7 @@
                             <div class="col d-flex align-items-end">
                                 <button class="btn btn-outline-primary w-100"
                                         type="submit"
-                                        formaction="/testes/duplicar/@Model.TesteId/sortear-questoes">
+                                        formaction="/testes/gerar/segunda-etapa/sortear-questoes">
                                     Sortear Questões
                                 </button>
                             </div>
@@ -75,7 +75,7 @@
                             <div class="col-3 d-flex align-items-end">
                                 <button class="btn btn-outline-primary w-100"
                                         type="submit"
-                                        formaction="/testes/duplicar/@Model.TesteId/sortear-questoes">
+                                        formaction="/testes/gerar/segunda-etapa/sortear-questoes">
                                     Sortear Questões
                                 </button>
                             </div>
@@ -138,33 +138,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-
-    <script>
-        disciplinaSelect.addEventListener('change', (e) => {
-            var disciplinaId = e.target.value;
-
-            for (const option of materiaSelect.options) {
-                const optionDisciplinaId = option.dataset.disciplina;
-
-                if (!optionDisciplinaId || optionDisciplinaId === disciplinaId) {
-                    option.hidden = false;
-                } else {
-                    option.hidden = true;
-                }
-            }
-
-            materiaSelect.value = "";
-        });
-
-        var materiaSelect = document.querySelector("#materiaSelect");
-        var inputSerie = document.querySelector("#inputSerie");
-
-        materiaSelect.addEventListener("change", () => {
-            for (const option of materiaSelect.options){
-                if (option.selected == true) {
-                    inputSerie.value = option.dataset.serie
-                }
-            }
-        })
-    </script>
 }
