--- a/GeradorDeTestes.WebApp/Views/Questao/Index.cshtml
+++ b/GeradorDeTestes.WebApp/Views/Questao/Index.cshtml
@@ -5,12 +5,19 @@
     ViewBag.Titulo = "Visualização de Questões";
 
     var notificacao = ViewData[nameof(NotificacaoViewModel)] as NotificacaoViewModel;
+
+    var questoesAgrupadas = Model.Registros.GroupBy(q => q.Materia);
 }
 
 <p>
     <a class="btn btn-primary px-4" href="/questoes/cadastrar">
         <i class="bi bi-plus"></i>
         Cadastrar Novo/a
+    </a>
+
+    <a class="btn btn-outline-primary px-4 text-end" asp-action="PrimeiraEtapaGerar">
+        <i class="bi bi-robot"></i>
+        Gerar com IA
     </a>
 </p>
 
@@ -25,28 +32,44 @@
     </div>
 }
 
-<div class="d-flex flex-wrap gap-2">
-    @foreach (var item in Model.Registros)
-    {
-        <div class="col-12 col-md-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Matéria: @item.Enunciado</h5>
-                    <p class="card-text"><span class="fw-semibold">Matéria:</span> @item.Materia</p>
+@foreach (var grupo in questoesAgrupadas)
+{
+    <h4 class="text-primary my-4">@grupo.Key</h4>
 
-                    <span class="d-flex gap-1 justify-content-end mt-4">
-                        <a href="/questoes/detalhes/@item.Id" class="btn btn-secondary">
-                            <i class="bi bi-search"></i>
-                        </a>
-                        <a href="/questoes/editar/@item.Id" class="btn btn-primary">
-                            <i class="bi bi-pencil-square"></i>
-                        </a>
-                        <a href="/questoes/excluir/@item.Id" class="btn btn-danger">
-                            <i class="bi bi-trash"></i>
-                        </a>
-                    </span>
+    <div class="row g-3">
+        @foreach (var item in grupo)
+        {
+            <div class="col-12 col-md-3 d-flex">
+                <div class="card border-0 h-100 w-100 d-flex flex-column">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title fs-6">@item.Enunciado</h5>
+
+                        <p class="card-text mb-0">
+                            <span class="fw-semibold">Resposta Correta:</span> @item.RespostaCorreta
+                        </p>
+
+                        <p class="card-text mb-0">
+                            <span class="fw-semibold">Matéria:</span> @item.Materia
+                        </p>
+
+                        <p class="card-text mb-0">
+                            <span class="fw-semibold">Utilizada em teste:</span> @item.UtilizadaEmTeste
+                        </p>
+
+                        <div class="mt-auto d-flex gap-1 justify-content-end pt-3">
+                            <a asp-action="Detalhes" asp-route-id="@item.Id" class="btn btn-secondary">
+                                <i class="bi bi-search"></i>
+                            </a>
+                            <a asp-action="Editar" asp-route-id="@item.Id" class="btn btn-primary">
+                                <i class="bi bi-pencil-square"></i>
+                            </a>
+                            <a asp-action="Excluir" asp-route-id="@item.Id" class="btn btn-danger">
+                                <i class="bi bi-trash"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    }
-</div>
+        }
+    </div>
+}
