--- a/GeradorDeTestes.WebApp/Views/Materia/Index.cshtml
+++ b/GeradorDeTestes.WebApp/Views/Materia/Index.cshtml
@@ -9,7 +9,7 @@
 }
 
 <p>
-    <a class="btn btn-primary px-4" href="/materias/cadastrar">
+    <a class="btn btn-primary px-4" href="/materias/cadastrar" data-se="btnCadastrar">
         <i class="bi bi-plus"></i>
         Cadastrar Novo/a
     </a>
@@ -37,10 +37,10 @@
                     <p class="card-text"><span class="fw-semibold">Serie:</span> @item.Serie.GetDisplayName()</p>
 
                     <span class="d-flex gap-1 justify-content-end mt-4">
-                        <a href="/materias/editar/@item.Id" class="btn btn-primary">
+                        <a href="/materias/editar/@item.Id" class="btn btn-primary" title="Edição">
                             <i class="bi bi-pencil-square"></i>
                         </a>
-                        <a href="/materias/excluir/@item.Id" class="btn btn-danger">
+                        <a href="/materias/excluir/@item.Id" class="btn btn-danger" title="Exclusão">
                             <i class="bi bi-trash"></i>
                         </a>
                     </span>
