Implementado teste de interface para o modulo Teste

--- a/GeradorDeTestes.WebApp/Views/Teste/Duplicar.cshtml
+++ b/GeradorDeTestes.WebApp/Views/Teste/Duplicar.cshtml
@@ -65,7 +65,7 @@
                             <div class="col d-flex align-items-end">
                                 <button class="btn btn-outline-primary w-100"
                                         type="submit"
-                                        formaction="/testes/duplicar/@Model.TesteId/sortear-questoes">
+                                        formaction="/testes/duplicar/@Model.TesteId/sortear-questoes" data-se="btnSortear">
                                     Sortear Questões
                                 </button>
                             </div>
@@ -75,7 +75,7 @@
                             <div class="col-3 d-flex align-items-end">
                                 <button class="btn btn-outline-primary w-100"
                                         type="submit"
-                                        formaction="/testes/duplicar/@Model.TesteId/sortear-questoes">
+                                        formaction="/testes/duplicar/@Model.TesteId/sortear-questoes" data-se="btnSortear">
                                     Sortear Questões
                                 </button>
                             </div>
@@ -126,7 +126,7 @@
 
                     <div class="form-group d-flex align-items-center justify-content-end gap-3 mt-5">
                         <a asp-action="Index">Voltar para a listagem</a>
-                        <button type="submit" class="btn btn-primary rounded-3 px-5">Confirmar</button>
+                        <button type="submit" class="btn btn-primary rounded-3 px-5" data-se="btnConfirmar">Confirmar</button>
                     </div>
                 </form>
             </div>
