--- a/GeradorDeTestes.WebApp/Views/Teste/Index.cshtml
+++ b/GeradorDeTestes.WebApp/Views/Teste/Index.cshtml
@@ -9,7 +9,7 @@
 }
 
 <p>
-    <a class="btn btn-primary px-4" asp-action="PrimeiraEtapaGerar">
+    <a class="btn btn-primary px-4" asp-action="PrimeiraEtapaGerar" data-se="btnCadastrar">
         <i class="bi bi-plus"></i>
         Cadastrar Novo/a
     </a>
